[package]
name = "waifu_core"
version = "1.0.0"
edition = "2021"
description = "WAIFU - The Agentic Layer 1 Blockchain"
authors = ["WaifuAI"]

[dependencies]
# Async Runtime
tokio = { version = "1.32", features = ["full"] }

# HuggingFace Rust LLM Framework
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"

# Lock-Free Data Structures
crossbeam = "0.8.4"

# Parallel CPU Compute
rayon = "1.10"

# Cryptographic Hashing for DAG
blake3 = "1.5"
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.11"

# Networking (Mesh)
libp2p = { version = "0.54", features = ["tcp", "quic", "noise", "yamux", "gossipsub", "mdns", "tokio", "macros"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Random
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Hex encoding
hex = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
